1.3.12:
-------

- Introduced new piler.conf variable: tls_min_version

  It sets the minimum TLS protocol version the piler-smtp daemon supports.

  Possible values:
  - TLSv1   (not recommended)
  - TLSv1.1 (not recommended)
  - TLSv1.2 (default)
  - TLSv1.3


1.3.11:
-------

- [BUGFIX] Refactored the smtp timeout check
- Obsoleted the LDAP port parameter. Specify the ldap host in the form
  of protocol://hostname:port, eg. ldaps://ldap.yourdomain.com:636

1.3.10:
-------

- Added security header feature
- Introduced the smtp acl list, and obsoleted the tcp_wrappers check
- Switched from Blowfish encryption to AES-256

1.3.9:
------

- Added a separator to searching for attachment names
- [BUGFIX] Render multiple mail parts in mail view instead of only the last part
- Use TLS v1.2 with openssl 1.0.x for connecting remote pop3/imap servers
- Instant search results to the gui when the search page loads
- Support sphinx-3.3.1, introduced sphinx strict mode variable
- GUI domain fixes
- gcc 9 fixes
- Fix permission on sphinx data dir to 700
- pilerpurge.py should honor the mysqlhost value
- Password change enabled by default
- Health page fixes
- GUI mime parser fixes
- Start/stop script fix
- Optimized search page for mobile devices, set $config['ENABLE_MOBILE_PREVIEW'] = 1; in config-site.php to enable it


1.3.0:
-----

- Switched from utf8 to utf8mb4 encoding.

- Switched from preforking model to epoll

- Removed PDF support

- GUI fixes

- Added HTML purifier support

- Rewritten pilerpurge in Python

1.2.0:
------

Heavy SQL scheme changes throughout the development of 1.2.0!

2016.10.06.

Removed deb and rpm packaging metadata.

2016.09.21.

Improved logging for the GUI. See the new config option: $config['LOG_LEVEL'] = NORMAL;

2016.09.18.

Moved all piler configuration from ${sysconfdir} to ${sysconfdir}/piler, eg.

root@01b74b787c26:/# ls -la /usr/local/etc/piler/
total 36
drwxr-xr-x 1 root root    24 Oct  6 20:49 .