@@ -238,6 +238,15 @@ mmap_dedup_test=0
 ; clients via an IP-address list is not feasible.
 security_header=
 
+; By default the archive accepts any envelope recipient addresses.
+; If your archive's port 25 is wide open to the Internet (which it
+; shouldn't be, then spammers may find it, and fill it with spam.
+;
+; By setting this variable you may restrict the envelope address
+; to a single email address, eg. some-random-address-12345@archive.yourdomain.com
+; Then the archive will reject any other envelope recipients
+archive_address=
+
 ; whether to enable (1) or not (0) an smtp access list similar to
 ; postfix's postscreen. Valid actions in the acl file are "permit"
 ; and "reject" (without quotes). See smtp.acl.example for more.
